# mx-datetime

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PKGBUILD  README.md  about.cpp  build.sh  clockface.cpp  clockface.h  datetime.cpp  datetime.h  datetime.ui  helper.cpp  license.html  main.cpp  mx-datetime.desktop  mx-datetime.pro  mx-datetime.sources  mx-time-date  release.sh  version.h
.github/workflows/: release.yaml
debian/: changelog  control  copyright  install  postinst  postrm  rules
debs/: mx-datetime-dbgsym_0.19.9.06_amd64.deb  mx-datetime-dbgsym_0.19.9.06_i386.deb  mx-datetime-dbgsym_19.10.01_amd64.deb  mx-datetime-dbgsym_19.10.01_i386.deb  mx-datetime_0.19.8.dsc  mx-datetime_0.19.8.tar.xz  mx-datetime_0.19.8_amd64.changes  mx-datetime_0.19.8_amd64.deb  mx-datetime_0.19.8_i386.deb  mx-datetime_0.19.9.01.dsc  mx-datetime_0.19.9.01.tar.xz  mx-datetime_0.19.9.01_amd64.changes  mx-datetime_0.19.9.01_amd64.deb  mx-datetime_0.19.9.01_i386.deb  mx-datetime_0.19.9.02.dsc  mx-datetime_0.19.9.02.tar.xz  mx-datetime_0.19.9.02_amd64.changes  mx-datetime_0.19.9.02_amd64.deb  mx-datetime_0.19.9.02_i386.deb  mx-datetime_0.19.9.03.dsc  mx-datetime_0.19.9.03.tar.xz  mx-datetime_0.19.9.03_amd64.changes  mx-datetime_0.19.9.03_amd64.deb  mx-datetime_0.19.9.03_i386.deb  mx-datetime_0.19.9.04.dsc  mx-datetime_0.19.9.04.tar.xz  mx-datetime_0.19.9.04_amd64.changes  mx-datetime_0.19.9.04_amd64.deb  mx-datetime_0.19.9.04_i386.deb  mx-datetime_0.19.9.05.dsc  mx-datetime_0.19.9.05.tar.xz  mx-datetime_0.19.9.05_amd64.changes  mx-datetime_0.19.9.05_amd64.deb  mx-datetime_0.19.9.05_i386.deb  mx-datetime_0.19.9.06.dsc  mx-datetime_0.19.9.06.tar.xz  mx-datetime_0.19.9.06_amd64.build  mx-datetime_0.19.9.06_amd64.buildinfo  mx-datetime_0.19.9.06_amd64.changes  mx-datetime_0.19.9.06_amd64.deb  (+232 more)
help/: mx-datetime.html
scripts/: mx-datetime-launcher  org.mxlinux.pkexec.mx-datetime-helper.policy
translations/: get_translations  mx-datetime_af.ts  mx-datetime_am.ts  mx-datetime_ar.ts  mx-datetime_ast.ts  mx-datetime_be.ts  mx-datetime_bg.ts  mx-datetime_bn.ts  mx-datetime_bs.ts  mx-datetime_bs_BA.ts  mx-datetime_ca.ts  mx-datetime_ceb.ts  mx-datetime_co.ts  mx-datetime_cs.ts  mx-datetime_cy.ts  mx-datetime_da.ts  mx-datetime_de.ts  mx-datetime_el.ts  mx-datetime_en.ts  mx-datetime_en_GB.ts  mx-datetime_en_US.ts  mx-datetime_eo.ts  mx-datetime_es.ts  mx-datetime_es_ES.ts  mx-datetime_et.ts  mx-datetime_eu.ts  mx-datetime_fa.ts  mx-datetime_fi.ts  mx-datetime_fi_FI.ts  mx-datetime_fil.ts  mx-datetime_fil_PH.ts  mx-datetime_fr.ts  mx-datetime_fr_BE.ts  mx-datetime_fr_FR.ts  mx-datetime_fy.ts  mx-datetime_ga.ts  mx-datetime_gd.ts  mx-datetime_gl.ts  mx-datetime_gl_ES.ts  mx-datetime_gu.ts  (+88 more)
translations-desktop-file/po/: mx-datetime-desktop_af.po  mx-datetime-desktop_am.po  mx-datetime-desktop_ar.po  mx-datetime-desktop_be.po  mx-datetime-desktop_bg.po  mx-datetime-desktop_bn.po  mx-datetime-desktop_ca.po  mx-datetime-desktop_cs.po  mx-datetime-desktop_da.po  mx-datetime-desktop_de.po  mx-datetime-desktop_el.po  mx-datetime-desktop_en.po  mx-datetime-desktop_en_GB.po  mx-datetime-desktop_eo.po  mx-datetime-desktop_es.po  mx-datetime-desktop_es_ES.po  mx-datetime-desktop_et.po  mx-datetime-desktop_eu.po  mx-datetime-desktop_fa.po  mx-datetime-desktop_fi.po  mx-datetime-desktop_fil_PH.po  mx-datetime-desktop_fr.po  mx-datetime-desktop_fr_BE.po  mx-datetime-desktop_fr_FR.po  mx-datetime-desktop_gl_ES.po  mx-datetime-desktop_gu.po  mx-datetime-desktop_he.po  mx-datetime-desktop_he_IL.po  mx-datetime-desktop_hi.po  mx-datetime-desktop_hr.po  mx-datetime-desktop_hu.po  mx-datetime-desktop_id.po  mx-datetime-desktop_is.po  mx-datetime-desktop_it.po  mx-datetime-desktop_ja.po  mx-datetime-desktop_kk.po  mx-datetime-desktop_ko.po  mx-datetime-desktop_ku.po  mx-datetime-desktop_lt.po  mx-datetime-desktop_mk.po  (+25 more)
translations-desktop-file/pot/: mx-datetime-desktop.pot
